# emv-utils

./: .gitmodules  CMakeLists.txt  README.md  rpm_changelog.txt
.github/workflows/: codeql.yaml  fedora-build.yaml  macos-build.yaml  ubuntu-build.yaml  windows-build.yaml
bash-completion/: emv-decode  emv-tool
cmake/: emv-utils-config.cmake.in  emvUtilsConfig.cmake.in
cmake/Modules/: FindIsoCodes.cmake  FindPCSCLite.cmake  Findjson-c.cmake
gentoo/dev-libs/emv-utils/: emv-utils-9999.ebuild  metadata.xml
macos/: emv_utils_dmg_setup.scpt
pkgconfig/: libemv.pc.in  libemv_strings.pc.in  libiso7816.pc.in  libiso8825.pc.in  libiso8859.pc.in
scripts/: prepare_icons.sh
src/: CMakeLists.txt  emv.c  emv.h  emv_app.c  emv_app.h  emv_capk.c  emv_capk.h  emv_capk_static_data.h  emv_config.c  emv_config.h  emv_config_xml.c  emv_config_xml.h  emv_date.c  emv_date.h  emv_debug.c  emv_debug.h  emv_dol.c  emv_dol.h  emv_fields.c  emv_fields.h  emv_oda.c  emv_oda.h  emv_oda_types.h  emv_rsa.c  emv_rsa.h  emv_strings.c  emv_strings.h  emv_tags.h  emv_tal.c  emv_tal.h  emv_tlv.c  emv_tlv.h  emv_ttl.c  emv_ttl.h  emv_utils_config.h.in  iso7816.c  iso7816.h  iso7816_apdu.h  iso7816_compact_tlv.c  iso7816_compact_tlv.h  (+20 more)
tests/: CMakeLists.txt  emv_aid_info_test.c  emv_atr_parse_test.c  emv_build_candidate_list_test.c  emv_capk_test.c  emv_cardreader_emul.c  emv_cardreader_emul.h  emv_config_xml_test.c  emv_cvmlist_test.c  emv_date_test.c  emv_debug_test.c  emv_dol_test.c  emv_initiate_application_processing_test.c  emv_processing_restrictions_test.c  emv_read_application_data_test.c  emv_rsa_cda_test.c  emv_rsa_test.c  emv_select_application_test.c  emv_str_parse_test.c  emv_terminal_risk_management_test.c  emv_ttl_pcsc_test.c  emv_ttl_tpdu_test.c  iso8825_oid_encode_test.c  iso8859_test.c  isocodes_test.c  mcc_test.c
tools/: CMakeLists.txt  emv-config-example.xml  emv-config.xsd  emv-decode.c  emv-tool.c  print_helpers.c  print_helpers.h
valgrind/: emv-utils.supp
viewer/: CMakeLists.txt  emv-viewer-mainwindow.cpp  emv-viewer-mainwindow.h  emv-viewer-mainwindow.ui  emv-viewer.appdata.xml  emv-viewer.cpp  emv-viewer.desktop  emv_viewer_config.h.in  emvhighlighter.cpp  emvhighlighter.h  emvtlvinfo.cpp  emvtlvinfo.h  emvtreeitem.cpp  emvtreeitem.h  emvtreeview.cpp  emvtreeview.h  icon.rc  icons.qrc
viewer/icons/: openemv_emv_utils.icns
